Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69463

Camera view matrix computation unstable (regression)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 5.9.5, 5.10.1, 5.11.1
    • Qt3D
    • None
    • f8b1ca7bf (dev), 484f1ae5e (6.7), 994be9f2f (6.6), 8482f82cb (tqtc/lts-6.5)

    Description

      We have started to use Qt3D in QGIS with great success (thanks for that!), but recently we have found out that a bugfix for QTBUG-65896 introduced in recent Qt versions caused a regression. This is the change: https://codereview.qt-project.org/#/c/217105/

      Since then, the camera in QGIS 3D view becomes very "shaky" during transitions when the camera's position coordinates get to the order of tens of thousands or more.

      I am attaching a simple test case and two recorded videos of the test app running: one with Qt 5.9.0 (good) and the other one with Qt 5.9.5 (bad).

      My assumption is that some part of the calculation introduces numerical errors causing the shakiness. I guess the values in order of 10^4 or 10^5 are still quite reasonable and so they should not cause such issues...

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkrus Mike Krus
            martin_dobias Martin Dobias
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change